fixed issue where movie cards are overlapping at certain screen sizes

--- a/client/src/styles/MovieCard.css
+++ b/client/src/styles/MovieCard.css
@@ -1,6 +1,6 @@
 .movie-card {
     min-height: 450px;
-    width: 250px;
+    /* width: 250px; */
     border-radius: 20px;
     cursor: pointer;
     transition: all 0.3s;
